add margin in body

--- a/drblur-policy.html
+++ b/drblur-policy.html
@@ -5,8 +5,8 @@
       <link rel="stylesheet" href="./bootstrap.min.css">
       <link rel="stylesheet" href="./bootstrap-theme.min.css">
    </head>
-   <body>
-      <div class="container">
+   <body style="margin-left: 30px; margin-right: 30px">
+       <div class="container">
          <div class="row">
             <h1>Privacy Policy</h1>
          </div>
@@ -51,7 +51,7 @@
             <h3>개인정보 파기절차 및 방법</h3>
             <p>VoyagerX는 원칙적으로 개인정보의 수집 및 이용목적이 달성되면 이용자의 개인정보를 지체없이 파기합니다. 종이에 출력된 개인정보는 분쇄기로 분쇄하고, 전자적 파일 형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다. 단, 관계 법령의 규정에 의하여 보존할 필요가 있는 경우에는 일정 기간 동안 개인정보를 보관할 수 있습니다.</p>
             <h3>개인정보보호 업무 관련 문의처</h3>
-            <p>본 개인정보취급방침에 관해 질문/불만/상담 내용이 있는 경우 개인정보 관리책임자 남세동(help+drblur@voyagerx.com)로 신고하실 수 있습니다.</p>
+            <p>본 개인정보취급방침에 관해 질문/불만/상담 내용이 있는 경우 개인정보 관리책임자 남세동(help+drblur@voyagerx.com)으로 신고하실 수 있습니다.</p>
             <h3>개인정보취급방침의 개정</h3>
             <p>본 개인정보취급방침은 개정되는 경우가 있습니다. 중요한 변경사항이 있을 때에는 알기 쉬운 방법으로 개정 전에 이용자에게 개정 내용을 공지합니다.</p>
             <h5>2018년 8월 6일 한국어 버전 개인정보취급방침 제정</h5>
