--- a/vrew-policy.html
+++ b/vrew-policy.html
@@ -16,7 +16,7 @@
             <p>VoyagerX는 다음과 같이 유저 정보를 취급합니다.</p>
             <h3>수집하는 개인정보의 항목</h3>
             <p>VoyagerX는 서비스 제공을 위해 아래와 같은 개인정보를 수집합니다.</p>
-            <p>[윈도우 어플리케이션, 맥 어플리케이션, 리눅스 어플리케이션, 웹, 안드로이드, 아이폰]</p>
+            <p>[윈도우 앱, 맥 앱, 리눅스 앱, 웹, 안드로이드 앱, 아이폰 앱]</p>
             <ul>
                <li>필수항목: 개인을 식별할 수 없는 단말기 관련 정보 및 서비스 이용 기록</li>
             </ul>
