add facebook analytics policy

--- a/drblur-policy.html
+++ b/drblur-policy.html
@@ -44,8 +44,10 @@
                <li>회사는 이용자 혹은 법정 대리인의 요청에 의해 해지 또는 삭제된 개인정보는 아래 "개인정보의 보유 및 이용기간"에 명시된 바에 따라 처리하고 그 외의 용도로 열람 또는 이용할 수 없도록 처리하고 있습니다.</li>
             </ul>
             <h3>개인정보 자동 수집 장치에 관한 사항</h3>
-            <h4>구글 Firebase 및 페이스북 Analytics를 이용한 앱로그 분석</h4>
-            <p>구글 Firebase 및 페이스북 Analytics를 활용해 이용자의 서비스 이용에 대한 분석이 이루어집니다.</p>
+            <h4>구글 Firebase를 이용한 앱로그 분석</h4>
+            <p>구글 Firebase를 활용해 이용자의 서비스 이용에 대한 분석이 이루어집니다.</p>
+            <h4>페이스북 Analytics를 이용한 앱로그 분석</h4>
+            <p>페이스북 Analytics를 활용해 이용자의 서비스 이용에 대한 분석이 이루어집니다.</p>
             <h3>개인정보의 보유 및 이용기간</h3>
             <p>VoyagerX는 원칙적으로 개인정보의 수집 및 이용목적이 달성되면 이용자의 개인정보를 파기합니다. 단, 회사 내부방침이나 관계법령의 규정에 의하여 보존할 필요가 있는 경우에는 일정 기간 동안 개인정보를 보관할 수 있습니다.</p>
             <h3>개인정보 파기절차 및 방법</h3>
